--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -16,9 +16,15 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3-dev build-essential
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install wheel setuptools
           pip install -r requirements.txt
 
       - name: Run scraper
