--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -37,6 +37,6 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add previous_content.json
-          git commit -m "Update previous content" || echo "No changes to commit"
-          git push 
+          git add -A  # 全ての変更をステージング
+          git diff --staged --quiet || git commit -m "Update previous content"  # 変更がある場合のみコミット
+          git push || echo "No changes to push" 
