--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -12,8 +12,9 @@ jobs:
   scrape:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
+          fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
@@ -57,8 +58,14 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add -A
-          git diff --staged --quiet || git commit -m "Update previous content"
-          git push https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/} || echo "No changes to push"
+          git add previous_content.json
+          git status
+          git diff --staged
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Update previous content"
+            git push origin HEAD:${GITHUB_REF#refs/heads/}
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
