--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-# macOS system files
-.DS_Store
-.AppleDouble
-.LSOverride
-Icon
-._*
+# Environment variables
+.env
 
 # Python
 __pycache__/
@@ -11,6 +7,7 @@ __pycache__/
 *$py.class
 *.so
 .Python
+env/
 build/
 develop-eggs/
 dist/
@@ -26,16 +23,6 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
-
-# Virtual Environment
-venv/
-env/
-ENV/
-.env
-.venv
-pip-log.txt
-pip-delete-this-directory.txt
 
 # IDE
 .idea/
@@ -43,6 +30,23 @@ pip-delete-this-directory.txt
 *.swp
 *.swo
 *~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# macOS system files
+.AppleDouble
+.LSOverride
+Icon
+._*
+
+# Virtual Environment
+venv/
+ENV/
+.venv
+pip-log.txt
+pip-delete-this-directory.txt
 
 # Unit test / coverage reports
 htmlcov/
@@ -57,3 +61,4 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/ 
+previous_content.json
