--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -3,7 +3,13 @@ name: Scrape COMOLI Info
 on:
   schedule:
     - cron: '0 4 * * *'  # 毎日04:00 UTCに実行（日本時間13:00）
-  workflow_dispatch:  # 手動実行用
+  workflow_dispatch:
+    inputs:
+      test_mode:
+        description: 'Run in test mode (skip content comparison)'
+        required: false
+        default: false
+        type: boolean
 
 permissions:
   contents: write
@@ -39,22 +45,27 @@ jobs:
             echo "Error: LINE_CHANNEL_ACCESS_TOKEN is not set"
             exit 1
           fi
-          if [ -z "$LINE_USER_ID" ]; then
-            echo "Error: LINE_USER_ID is not set"
+          if [ -z "$LINE_CHANNEL_SECRET" ]; then
+            echo "Error: LINE_CHANNEL_SECRET is not set"
             exit 1
           fi
         env:
           LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
-          LINE_USER_ID: ${{ secrets.LINE_USER_ID }}
+          LINE_CHANNEL_SECRET: ${{ secrets.LINE_CHANNEL_SECRET }}
 
       - name: Run scraper
         env:
           LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
-          LINE_USER_ID: ${{ secrets.LINE_USER_ID }}
-        run: python scrape_comoli.py
+          LINE_CHANNEL_SECRET: ${{ secrets.LINE_CHANNEL_SECRET }}
+        run: |
+          if [ "${{ inputs.test_mode }}" = "true" ]; then
+            python scrape_comoli.py --test
+          else
+            python scrape_comoli.py
+          fi
 
       - name: Commit changes
-        if: success()  # スクリプトが成功した場合のみ実行
+        if: success() && inputs.test_mode != 'true'  # テストモードの場合はコミットをスキップ
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
